--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,20 @@ div {
     color: white;
 }
 
-table {
+.buildings-table {
     margin-left: auto;
     margin-right: 25px;
 }
 
-td {
+tr:hover {
+    transform: scale(1.01);
+}
+
+tr:active {
+    transform: scale(1);
+}
+
+.buildings-table > td {
     background-image: none;
     background-color: transparent;
 }
@@ -32,10 +40,6 @@ button {
     height: 25px;
     font-size: 20px;
     color: white;
-}
-
-button:hover {
-    background-color: green;
 }
 
 .building-picture {
@@ -52,7 +56,7 @@ button:hover {
     background-image: url("images/wood-texture.jpg");
     background-color: #cccccc;
     border: 2px solid;
-    width: 240px;
+    width: 280px;
 }
 
 .building-name {
@@ -65,4 +69,15 @@ button:hover {
     margin-left: 5px;
     margin-right: auto;
     font-size: 15px;
+}
+
+.building-production {
+    margin-left: 5px;
+    margin-right: auto;
+    font-size: 12px;
+    color: #cccccc;
+}
+
+#juicer-quantity {
+    color: orange;
 }
