--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,7 @@
 }
 
 body {
-    background-image: url("images/background.png");
-    background-size: cover;
+    background-image: url("images/background.jpg");
     font-family: comic sans ms;
 }
 
